# mmvc_client

./: .gitignore  README.md  bun.lockb  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  postAttachCommand.sh
src/: main.py
src/models/: downloader.py
